--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,8 +7,15 @@
   </head>
 
   <body>
-
+    <nav>
+      <div><a href="/rock">Play Rock</a></div>
+      <div><a href="/paper">Play Paper</a></div>
+      <div><a href="/scissors">Play Scissors</a></div>
+    </nav>
+    
     <%= yield %>
 
+    <a href="/">Rules</a>
+    
   </body>
 </html>
